compiler/tests/compile-fail/function-user-compile-error.rsp
(import [risp base])

(defn main! ()
    (compile-error "Some message")) ;~ ERROR Some message